<resources>
    <string name="app_name">To Do</string>


    <string name="pressBackTwice">Press BACK again to exit.</string>

    <!--LoginActivity & SignUpActivity-->
    <string name="uNameHint">Enter your E-Mail</string>
    <string name="passHint">Enter your password</string>
    <string name="loginButtonText">Login</string>
    <string name="signUpButtonText">Don\'t have an account? Sign-Up</string>

    <!--SignUpActivity-->
    <string name="nameHint">Enter your first name</string>
    <string name="rePassHint">Re-enter your password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="loginButton">Already have an account ? Login</string>

    <!--CategoryNames-->
    <string-array name="categoryNames">
        <item>Home</item>
        <item>Work</item>
    </string-array>

    <!--AddTaskActivity-->
    <string name="addATask">Add a task</string>
    <string name="enterTaskHint">What do you wanna do ?</string>
    <string name="addingTask">Task will be added to </string>
    <string name="category">Category</string>
    <string name="forUser"> for User: </string>
</resources>
