<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="30dp"
            android:hint="@string/uNameHint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uNameField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="30dp"
            android:hint="@string/passHint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passField"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:text="@string/loginButtonText"
        app:cornerRadius="25dp" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignStart="@id/loginButton"
        android:layout_alignLeft="@id/loginButton"
        android:layout_alignEnd="@id/loginButton"
        android:layout_alignRight="@id/loginButton"
        android:layout_marginTop="10dp"
        android:text="@string/signUpButtonText"
        android:textAllCaps="false" />


</RelativeLayout>