<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="35dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/user_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_user_circle" />

            <EditText
                android:id="@+id/uNameField"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/user_logo"
                android:layout_alignBottom="@+id/user_logo"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/user_logo"
                android:layout_toRightOf="@+id/user_logo"
                android:hint="@string/uNameHint"
                android:inputType="textEmailAddress"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingEnd="2dp"
                android:paddingRight="2dp" />

            <ImageView
                android:id="@+id/pass_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/user_logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_user_circle" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/pass_logo"
                android:layout_alignBottom="@+id/pass_logo"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_toEndOf="@+id/pass_logo"
                android:layout_toRightOf="@+id/pass_logo"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingEnd="2dp"
                android:paddingRight="2dp" />

            <Button
                android:id="@+id/viewPass"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignTop="@+id/passField"
                android:layout_alignBottom="@+id/passField"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@id/passField"
                android:layout_toRightOf="@id/passField"
                android:background="@drawable/ic_user_circle" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg"
                android:layout_below="@id/passField"
                android:layout_marginLeft="105dp"
                android:layout_marginRight="105dp"
                android:layout_marginStart="105dp"
                android:layout_marginEnd="105dp"
                android:layout_marginTop="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/loginButtonText"
                />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_bg"
                android:layout_below="@id/loginButton"
                android:layout_alignLeft="@id/loginButton"
                android:layout_alignEnd="@id/loginButton"
                android:layout_alignRight="@id/loginButton"
                android:layout_alignStart="@id/loginButton"
                android:layout_marginTop="35dp"
                android:text="@string/signUpButtonText"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>